# league-config-manager

./: Cargo.toml  README.md
src/: app.rs  cfg.rs  champion.rs  colors.rs  config.rs  dialog.rs  error.rs  game_settings.rs  main.rs  message.rs  paste.rs  profile.rs  theme.rs  websocket.rs  widget.rs
src/app/: update.rs  view.rs
src/champion/: champion.json  gen_list.py  list.rs
src/profile/: settings.rs  view.rs
