[package]
name = "league_config_manager"
version = "1.0.0"
edition = "2021"
authors = ["Dusan <brkicdusan05@gmail.com>"]
description = "Config manager for League of Legends"

[dependencies]
zip = { version = "2.2.0" }
directories = "5.0.1"
iced = { version = "0.12.1" }
rfd = "0.14.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
